src/App.css
/* ... */
.footer_spacer {
  margin: 6px 0
}

.footer_socials {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0 14px;
  transition: all 200ms ease;
  /* margin-top: 3px; */

  i {
    font-size: 1.35rem;
  }
  svg {
    position: relative;
    top: 2px;
  }
  svg, i {
      height: 20px;
      width: 20px;
      stroke: none;
      fill: var(--white);
      color: var(--white);
  }
  svg:hover, i:hover {
  fill: var(--alt_white);
  color: var(--alt_white);
  }
}

.footer_images {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 0 56px;
}

.footer_image_one {
  height: 65px;
}

.footer_image_two {
  margin-top: 8px;
  height: 67px;
}

@media screen and (max-width: 870px) {
  .footer_links {
      flex-direction: column;
      align-items: flex-start;

      a {
        margin: 5px 0
      }
  }
  .footer_images {
    gap: 16px 56px;
    margin-right: 8px;
  }
  .footer_socials {
    margin-right: 8px;
    margin-top: 0px;
  }
  .bee_dev {
    height: 80px;
    margin-bottom: 12px;

      p, a {
          margin: 0;
      }
  }
}

@media screen and (max-width: 550px) {
  .footer {
    padding-right: 72px;
    padding-bottom: 16px;
  }
  .footer_links {
      padding-left: 12px;
  }
  .footer_images {
      margin-right: 0px;
      gap: 40px 16px;
      flex-direction: column;
  }
  .footer_socials {
      margin-right: 0px;
      margin-left: 2px;
  }
}

@media screen and (max-width: 370px) {
  .footer_images {
      margin-right: 4px;
      gap: 0 24px;
  }
  .footer_socials {
      margin-right: 4px;
  }
}

/*  Footer Link Style */
.footer_link {
  position: relative;
  font-size: 0.9rem;
  color: var(--white);
  text-decoration: none;
  cursor: pointer;
  text-wrap: nowrap;

  &:hover {
    color: var(--alt_white);
  }
  &::before {
      left: 0; 
  }
  &::after {
      right: 0;
  }
}

.footer_link:before, .footer_link:after {
  content: '';
  border-bottom: 1px solid var(--alt_white);
  position: absolute;
  bottom: 0;
  width: 0;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.footer_link:hover:before, .footer_link:hover:after {
  width: 50%;
}
/*                            */
/*      END FOOTER STYLES     */
/*                            */


/*                             */
/*     GO TO TOP COMPONENT     */
/*                             */
.go_top_button {
  position: fixed;
  top: calc(100% - 105px);  
  right: 25px;
  height: 50px;
  width: 50px;
  font-size: 30px;
  background-color: var(--main_bg);
  color: var(--blue);
  border: 3px solid var(--blue);
  border-radius: 25%;
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 300ms ease;

  &:hover {
      color: var(--shadow);
      border: 3px solid var(--shadow);
  }
}

@media screen and (max-width: 870px) {
  .go_top_button {
      top: calc(100% - 160px); 
  }
}

@media screen and (max-width: 555px) {
  .go_top_button {
      right: 12px;
  }
}

@media screen and (max-width: 500px) {
  .go_top_button {
      height: 35px;
      width: 35px;
      font-size: 20px;
      right: 16px;
      top: calc(100% - 80px); 
  }
}
/*                             */
/*   END GO TO TOP COMPONENT   */
/*                             */


/*                          */
/*        SLIDESHOW         */
/*                          */
.slideshow, .slideshow::after { 
  position: relative;
  width: 100%;
  min-width: 290px;
  aspect-ratio: 2/1;
  list-style-type: none;
  border: 3px solid var(--blue);
}

.slideshow li span { 
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--alt_white);
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  opacity: 0;
  z-index: 0;
  animation: imageAnimation 18s linear infinite 0s; 
}

/* images and times for slide show */
.slideshow li:nth-child(1) span { 
  background-image: url("./assets/Images/Dakkalbi.png"); 
}
.slideshow li:nth-child(2) span { 
  background-image: url("./assets/Images/Strawb_Croffle.jpg");
  animation-delay: 3s; 
}
.slideshow li:nth-child(3) span { 
  background-image: url("./assets/Images/Galbi2.png");
  animation-delay: 6s; 
}
.slideshow li:nth-child(4) span { 
  background-image: url("./assets/Images/Oreo_Croffle.jpg");   
  animation-delay: 9s; 
}
.slideshow li:nth-child(5) span { 
  background-image: url("./assets/Images/Kimbap.jpg");
  animation-delay: 12s; 
}
.slideshow li:nth-child(6) span { 
  background-image: url("./assets/Images/Bibim_Bap.jpg");
  animation-delay: 15s; 
}

/* Animation for slide show */
@keyframes imageAnimation { 
  0% { opacity: 0; animation-timing-function: ease-in; }
  8% { opacity: 1; animation-timing-function: ease-out; }
  17% { opacity: 1 }
  25% { opacity: 0 }
  100% { opacity: 0 }
}

/*         DOTS STYLES       */
.dots {
  display: flex;
  justify-content: center;
  list-style-type: none;
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  border: 2px solid var(--blue);
  border-radius: 20px;
  background-color: var(--shadow);
  padding: 2px;
  width: 150px;
  margin: 0 auto;
  transition: all 300ms ease;
  z-index: 100;

  li.dot, li.dot_active {
      width: 18px;
      height: 18px;
      border-radius: 50%;
      border: thin solid var(--white);
      margin: 5px;
      cursor: pointer;
      transition: background-color 1s;
    }
    li.dot {
      background-color: var(--white);
    }
}

.dots li.dot_active {
  background-color: var(--blue);
}

@media screen and (max-width: 950px) {
  .dots {
    width: 125px;

    li.dot, li.dot_active {
      width: 12px;
      height: 12px;
      margin: 4px 4px;
    }
  }
}

@media screen and (max-width: 530px) {
  .dots {
    width: 100px;
    bottom: 12px;

    li.dot, li.dot_active {
      width: 8px;
      height: 8px;
      margin: 3px 3px;
    }
  }
}
/* ... */

